--- a/.github/workflows/daily_test2.yml
+++ b/.github/workflows/daily_test2.yml
@@ -3,8 +3,8 @@
 name: QA Engineer | Antonio Rodriguez Farias
 
 on:
-  #schedule:
-    #- cron: '*/15 * * * *'
+  schedule:
+    - cron: '0 */6 * * *'
   workflow_dispatch:
 
 jobs:
@@ -103,7 +103,7 @@ jobs:
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
           git add .
-          git commit -m "QA Engineer"
+          git commit -m "QA Engineer | Antonio Rodriguez Farias"
  
       - name: Push changes
         uses: ad-m/github-push-action@master
