--- a/.github/workflows/daily_test2.yml
+++ b/.github/workflows/daily_test2.yml
@@ -94,8 +94,8 @@ jobs:
 
       - name: Commit files
         run: |
-          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
+          git config --local user.email "abgrodriguezfarias@gmail.com"
+          git config --local user.name "Antonio Rodriguez Farias"
           git add .
           git commit -m "QA Engineer | Antonio Rodriguez Farias"
 
@@ -105,33 +105,3 @@ jobs:
           github_token: ${{ secrets.PAT }}
           branch: "test"
           force: true
-
-      - name: Create Pull Request
-        uses: repo-sync/pull-request@v2
-        with:
-          destination_branch: "master"
-          source_branch: "test"
-          github_token: ${{ secrets.PAT }}
-          pr_title: "QA Engineer | Antonio Rodriguez Farias"
-          pr_body: |
-            :wave: Hi, I am @AntoniHub
-
-            🚀 About me
-            Software QA Engineer with experience in Frontend, Backend, Continuous Integration, Databases (SQL and NoSQL), UX/UI, Mobile, Architecture, Linux / macOS / Windows testing.
-
-            📊 Master Degree in Big Data - Catholic University of Avila
-            🔒 Post Graduate Diploma in Defensive Cybersecurity
-            💡 Diploma in Machine Learning | AI applied to Business
-            📌 Continuous Testing with GitHub Actions
-            📌 API Testing with Postman & Python
-            📌 Frontend Testing with Selenium WebDriver
-            📌 Backend Testing with Pytest, SQL & NoSQL
-            📌 Linux Testing with Vagrant & VirtualBox
-            📌 Mobile Testing with Android SDK & iOS
-            📝 I write in depth on my website about myself [rodriguezfarias.com](https://rodriguezfarias.com/)
-          pr_label: "automerge"
-
-      - name: automerge
-        uses: "pascalgn/automerge-action@v0.15.6"
-        env:
-          GITHUB_TOKEN: "${{ secrets.PAT }}"
